feat3.7  resolved user update existing email and then user can make to delete yourself from application . Remove user's credentials
